--- a/FourplacesApp/FourplacesApp.csproj
+++ b/FourplacesApp/FourplacesApp.csproj
@@ -12,9 +12,11 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.5.0.169047" />
     <PackageReference Include="Storm.Mvvm.Forms" Version="2.1.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Model\" />
+    <Folder Include="Model\Dtos\" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Mono.Android">
