--- a/FourplacesApp/FourplacesApp.csproj
+++ b/FourplacesApp/FourplacesApp.csproj
@@ -13,6 +13,8 @@
     <PackageReference Include="Xamarin.Forms" Version="3.5.0.169047" />
     <PackageReference Include="Storm.Mvvm.Forms" Version="2.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="Xam.Plugins.Settings" Version="3.1.1" />
+    <PackageReference Include="MonkeyCache.SQLite" Version="1.2.0-beta" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Model\" />
