--- a/FourplacesApp/FourplacesApp.csproj
+++ b/FourplacesApp/FourplacesApp.csproj
@@ -22,6 +22,7 @@
     <Folder Include="Model\" />
     <Folder Include="Model\Dtos\" />
     <Folder Include="View\" />
+    <Folder Include="ViewModel\" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Mono.Android">
