Ajout mvvm connectionViewModel

--- a/FourplacesApp/FourplacesApp.csproj
+++ b/FourplacesApp/FourplacesApp.csproj
@@ -29,4 +29,10 @@
       <HintPath>..\..\..\..\..\Library\Frameworks\Xamarin.Android.framework\Versions\9.1.8-0\lib\xamarin.android\xbuild-frameworks\MonoAndroid\v8.1\Mono.Android.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="MainPage.xaml.cs~" />
+    <None Remove="MainPage.xaml~" />
+    <None Remove="MyPage.xaml~" />
+    <None Remove="View\Connection.xaml~" />
+  </ItemGroup>
 </Project>
