--- a/FourplacesApp/FourplacesApp.csproj
+++ b/FourplacesApp/FourplacesApp.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.5.0.169047" />
+    <PackageReference Include="Xamarin.Forms" Version="3.6.0.220655" />
     <PackageReference Include="Storm.Mvvm.Forms" Version="2.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="Xam.Plugins.Settings" Version="3.1.1" />
@@ -34,5 +34,25 @@
     <None Remove="MainPage.xaml~" />
     <None Remove="MyPage.xaml~" />
     <None Remove="View\Connection.xaml~" />
+    <None Remove="ViewModel\LoginViewModel.cs~" />
+    <None Remove="View\Connection.xaml.cs~" />
+    <None Remove="View\LoginView.xaml~" />
+    <None Remove="ViewModel\EmptyClass.cs~" />
+    <None Remove="ViewModel\ConnectionViewModel.cs~" />
+    <None Remove="ViewModel\ConnectionViewModel.cs~" />
+    <None Remove="View\Connection.xaml~" />
+    <None Remove="View\Sign.xaml~" />
+    <None Remove="View\Sign.xaml.cs~" />
+    <None Remove="App.xaml.cs~" />
+    <None Remove="View\Sign.xaml.cs~" />
+    <None Remove="View\Sign.xaml~" />
+    <None Remove="ViewModel\SignViewModel.cs~" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="ViewModel\LoginViewModel.cs" />
+    <Compile Remove="View\LoginView.xaml.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Remove="View\LoginView.xaml" />
   </ItemGroup>
 </Project>
