--- a/FourplacesApp/FourplacesApp.csproj
+++ b/FourplacesApp/FourplacesApp.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Authors>Vincent Renard</Authors>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -47,10 +48,16 @@
     <None Remove="View\Sign.xaml.cs~" />
     <None Remove="View\Sign.xaml~" />
     <None Remove="ViewModel\SignViewModel.cs~" />
+    <None Remove="View\Connection.xaml~" />
+    <None Remove="View\Sign.xaml.cs~" />
+    <None Remove="View\Sign.xaml~" />
+    <None Remove="ViewModel\ConnectionViewModel.cs~" />
+    <None Remove="ViewModel\SignViewModel.cs~" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="ViewModel\LoginViewModel.cs" />
     <Compile Remove="View\LoginView.xaml.cs" />
+    <Compile Remove="ViewModel\Home.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Remove="View\LoginView.xaml" />
