--- a/FourplacesApp/FourplacesApp.csproj
+++ b/FourplacesApp/FourplacesApp.csproj
@@ -77,6 +77,9 @@
     <None Remove="Model\Dtos\PlaceItemSummary.cs~" />
     <None Remove="RestService.cs~" />
     <None Remove="IRestService.cs~" />
+    <None Remove="ViewModel\ConnectionViewModel.cs~" />
+    <None Remove="ViewModel\MenuViewModel.cs~" />
+    <None Remove="ViewModel\SignViewModel.cs~" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="ViewModel\LoginViewModel.cs" />
