--- a/FourplacesApp/FourplacesApp.csproj
+++ b/FourplacesApp/FourplacesApp.csproj
@@ -11,13 +11,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.6.0.220655" />
+    <PackageReference Include="Xamarin.Forms" Version="3.6.0.293080" />
     <PackageReference Include="Storm.Mvvm.Forms" Version="2.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="Xam.Plugins.Settings" Version="3.1.1" />
     <PackageReference Include="MonkeyCache.SQLite" Version="1.2.0-beta" />
     <PackageReference Include="Xam.Plugin.Geolocator" Version="4.5.4-beta" />
     <PackageReference Include="Xam.Plugin.Media" Version="4.2.0-beta" />
+    <PackageReference Include="Xamarin.Forms.Maps" Version="3.6.0.293080" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Model\" />
